@@ -4726,6 +4726,10 @@ assuming the result is monic of the same degree as $y$ (in particular $x\neq
 
 \fun{GEN}{Flx_deriv}{GEN z, ulong p}
 
+\fun{GEN}{Flx_Frobenius}{GEN T, ulong p}
+
+\fun{GEN}{Flx_matFrobenius}{GEN T, ulong p}
+
 \fun{GEN}{Flx_gcd}{GEN a, GEN b, ulong p} returns a (not necessarily monic)
 greatest common divisor of $x$  and $y$.
 
