@@ -201,6 +201,7 @@ GEN     Flx_Fl_mul_to_monic(GEN y, ulong x, ulong p);
 GEN     Flx_Flv_eval(GEN P, GEN v, ulong p);
 GEN     Flx_Flxq_eval(GEN f,GEN x,GEN T,ulong p);
 GEN     Flx_FlxqV_eval(GEN f,GEN x,GEN T,ulong p);
+GEN     Flx_Frobenius(GEN T, ulong p);
 GEN     Flx_add(GEN x, GEN y, ulong p);
 GEN     Flx_deflate(GEN x0, long d);
 GEN     Flx_deriv(GEN z, ulong p);
@@ -218,6 +219,7 @@ GEN     Flx_inflate(GEN x0, long d);
 GEN     Flx_invBarrett(GEN T, ulong p);
 int     Flx_is_squarefree(GEN z, ulong p);
 int     Flx_is_smooth(GEN g, long r, ulong p);
+GEN     Flx_matFrobenius(GEN T, ulong p);
 GEN     Flx_mod_Xn1(GEN T, ulong n, ulong p);
 GEN     Flx_mod_Xnm1(GEN T, ulong n, ulong p);
 GEN     Flx_mul(GEN x, GEN y, ulong p);
